--- a/Video 23-CSS Display Property/index.html
+++ b/Video 23-CSS Display Property/index.html
@@ -17,13 +17,13 @@
             width: 344px;
             
         }
-        .box1{
+        /* .box1{ */
             /* display: none; */
             /* visibility: hidden; */
             /* display: flex; */
             /* display: inline-flex;*/
             /* justify-content: center; */
-        }
+        /* } */
     </style>
     <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/display -->
 </head>
